FTB-Community/force-app/main/default/objects/FTB_ErrorLog__c/FTB_ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Custom Object to trace server errors</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>FTBERR-{0000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>