FTB-Community/force-app/main/default/objects/FTB_ErrorLog__c/fields/FTB_ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>FTB_ErrorCode__c</fullName>
    <description>This fields contains the error code to easily categorize errors</description>
    <label>Error Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>