FTB-Community/force-app/main/default/objects/FTB_ErrorLog__c/fields/FTB_ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>FTB_ErrorDescription__c</fullName>
    <description>This fields contains the error description</description>
    <label>Error Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>