FTB-Community/force-app/main/default/objects/FTB_ErrorLog__c/fields/FTB_Request__c.field-meta.xml
<CustomField>
    <fullName>FTB_Request__c</fullName>
    <description>This fields contains the request when a web service is invoked</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>