FTB-Community/force-app/main/default/objects/FTB_ErrorLog__c/fields/FTB_Response__c.field-meta.xml
<CustomField>
    <fullName>FTB_Response__c</fullName>
    <description>This fields contains the response of the web service invoked</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>