FTB-Community/force-app/main/default/objects/FTB_ErrorLog__c/fields/FTB_Service__c.field-meta.xml
<CustomField>
    <fullName>FTB_Service__c</fullName>
    <description>This fields represents the service being called from the client</description>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>